# Fingerprint-morphing

./: .gitignore  README.md  Zadání.txt  pip-install-req.sh
dokumentace/: main.tex
evaluation_modules/: .gitignore
evaluation_modules/Compare_fingerprint/: .gitignore
evaluation_modules/Compare_fingerprint/src/compare/: CMakeLists.txt  compare.cpp
evaluation_modules/Neurotec_Biometric_12_1_SDK/: VerifyFingerCPP.cpp
evaluation_modules/Neurotec_Biometric_6_0_SDK_Trial/: runtests.py
git/biometrics/: poincare.py  utils.py
git/fingerprint-alignment-master/: frequency.py  mextract_3.py  utils.py
morphing/: README.MD  morph.py
morphing/functions/: alighnMasks.py  alighnOrientFields.py  args.py  coreDetection.py  imageBasedMorphing.py  localRingeFrequencies.py  minutiae.py  morphingFunctions.py
morphing/libs/: basics.py  edges.py  enhancing.py  minutiae.py  processing.py
morphing/objects/: PlotRes.py
morphing/scripts/: changeDPIFolder.py  plus_fact.py
src/: morph.py  morph_gui.py  orientField (4th copy).py  orientField (another copy).py  orientField (copy).py  orientField.py  result.tif  tmp.py
src/functions/: alighnOrientFields.py  args.py  coreDetection.py  cutline.py  imageBasedMorphing.py  localRingeFrequencies.py  localRingeFrequencies_inspirated_on_git.py  localRingeFrequencies_old.py  minutiae.py  minutiaeBasedMorphing.py  morphingFunctions.py  orientField (copy).py  orientField.py  thinning.py
src/libs/: enhancing.py  minutiae.py
src/morph_input_gen/: gen.py  tmp
src/objects/: PlotRes.py  fingerprint - kopie.py  fingerprint.py
(+183 files in other folders)
